--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/uuid": "^9.0.0",
+    "axios": "^1.2.0",
+    "dashify": "^2.0.0",
     "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "next": "^13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
