--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "ethers": "^5.7.2",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.3.0",
     "next": "^13.0.4",
@@ -30,7 +31,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "typescript": "4.9.3",
-    "uuid": "^9.0.0"
+    "use-debounce": "^9.0.2",
+    "uuid": "^9.0.0",
+    "wagmi": "^0.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
