--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "ethers": "^5.7.2",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.3.0",
+    "netlify-cli": "^12.2.8",
     "next": "^13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "typescript": "4.9.3",
-    "uuid": "^9.0.0"
+    "use-debounce": "^9.0.2",
+    "uuid": "^9.0.0",
+    "wagmi": "^0.8.10"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.29.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
